# arturaralin.github.io

./: .gitignore  CNAME  README.md  app.js  app.js.map  bundle.js  cv.html  index.html  main.css  main.js  package-lock.json  package.json  sitemap.xml  skills-and-knowledge.md  styles.css  styles.css.map  webpack.config.js
cv-builder/: builder.js  cv-template.html  pdf.js  props.json  tools.js
data/: test.md
helpful-articles/: README.md  index.md
helpful-articles/javascript/: README.md
pages/: index.json
pages/logs_analysis_with_pandas/: logs_analysis_with_pandas.md
pages/ner_chatgpt/: ner_chatgpt.md
pages/nodejs_event_loop/: nodejs_event_loop.md
pages/remote_work_with_vpn/: logs_analysis_with_pandas.md
pages/rust_event_loop_runtime/: rust_event_loop_runtime.md
pages/some_article/: some_article.md
pages/v8_js_strings_and_memory/: analyse.ipynb  pyproject.toml  v8_js_strings_and_memory.md
pages/v8_js_strings_and_memory/tests/: assign.js  no_mutations.js  runner.js  slice.js  with_mutations.js
pages/v8_js_strings_and_memory/tests/results/: assign.csv  no_mutations.csv  slice.csv  with_mutations.csv
post/: logs_analysis_with_pandas.html  ner_with_chatgpt.html  nodejs_event_loop.html  rust_event_loop_runtime.html  some_article.html  v8_js_strings_and_memory.html
projects/: list.json
scripts/: render_blog.js
src/: app.js  cv.html  index.html  main.js  main.scss
src/styles/: cv.scss  main.scss  mobile.scss
templates/: article.html  base.html  general.html
tests/: app.js  custom.css  gpagespeed.html
